Update all tests to JUnit 5